# IFC5-Events

./: cli.py  pyproject.toml  sdk.py
data/instances/: component.json  example.json
data/instances/tests/: author.json  data.json  project.json  schema.json
data/schema/: component.schema.json  example.schema.json
resources/: .env  __init__.py  event.py  schema.py
resources/models/: __init__.py  author.py  data.py  event.py  hash.py  project.py  schema.py
resources/models/helpers/: __init__.py  hash.py
