[tool.poetry]
name = "ifc5-events"
version = "0.1.0"
description = ""
authors = ["Zachary Lancaster <Zachary.lancaster@warnermedia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
cloudevents = "^1.10.1"
pydantic = "^2.6.3"
aiohttp = "^3.9.3"
jsonschema = "^4.21.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
botocore = "^1.22.0"
boto3 = "^1.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
